# xen-sys

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  Cargo.toml  LICENSE-MIT  Makefile  README.md  Xargo.toml  coverage_config_aarch64.json  coverage_config_x86_64.json  x86_64-xen-oxerun.json  x86_64-xen-pv.json
crates/oxerun/: Cargo.toml  README.md  aarch64-xen-hvm.json  aarch64-xen-hvm.ld  x86_64-xen-pv.json  x86_64-xen-pv.ld
crates/oxerun/src/: main.rs
crates/xen/: Cargo.toml
crates/xen-bindings/: CONTRIBUTING.md  Cargo.toml  README.md  build.sh  wrapper_aarch64.h  wrapper_x86_64.h
crates/xen-bindings/src/: bindings_aarch64.rs  bindings_x86_64.rs  lib.rs  xen_bindings_aarch64.rs
crates/xen-ioctls/: Cargo.toml
crates/xen-ioctls/src/: lib.rs  private.rs  privcmd.rs  sysctl.rs  sysctl_types.rs  xc_misc.rs  xen_types.rs
crates/xen-ioctls/src/aarch64/: mod.rs  types.rs
crates/xen-ioctls/src/domctl/: domctl.rs  mod.rs  types.rs  xc_types.rs
crates/xen-ioctls/src/sysctl/: mod.rs  sysctl.rs  types.rs
crates/xen-ioctls/src/x86_64/: types.rs
crates/xen-ioctls/src/xdm/: types.rs  xdm.rs
crates/xen-ioctls/src/xec/: mod.rs  types.rs  xec.rs
crates/xen-ioctls/src/xfm/: mod.rs  types.rs  xfm.rs  xfm_types.rs
crates/xen-store/: Cargo.toml
crates/xen-store/src/: lib.rs  types.rs  xs.rs
crates/xen-sys/: Cargo.toml  README.md  wrapper.h
crates/xen-sys/src/: hypercall.rs  lib.rs
crates/xen-sys/src/aarch64/: hypercall.rs  mod.rs
crates/xen-sys/src/x86_64/: hypercall.rs  mod.rs
crates/xen/src/: lib.rs
crates/xen/src/aarch64/: asm_macros.S  entry.rs  vector_table.S
crates/xen/src/hypercall/: console_io.rs  sched_op.rs
crates/xen/src/x86_64/: entry.rs  mod.rs
examples/ioctls/: Cargo.toml
examples/ioctls/src/: main.rs
examples/oxerun/: Cargo.toml
examples/oxerun/src/: main.rs
examples/xstore/: Cargo.toml  README.md
examples/xstore/src/: main.rs
oxerun/: COPYING  Cargo.toml  README.md  aarch64-xen-hvm.json
oxerun/include/oxerun/: macros.h
oxerun/src/: lib.rs  main.rs
oxerun/src/x86_64/: head.S
xen/: Cargo.toml  README.md
xen-bindings/: Cargo.toml  README.md
xen-bindings/src/: bindings_aarch64.rs  bindings_x86_64.rs  lib.rs  xen_bindings_aarch64.rs  xen_bindings_x86_64.rs
xen-ioctls/: Cargo.toml
xen-ioctls/src/: private.rs
xen-ioctls/src/aarch64/: types.rs
xen-ioctls/src/domctl/: domctl.rs  types.rs  xc_types.rs
xen-ioctls/src/sysctl/: sysctl.rs
xen-ioctls/src/x86_64/: mod.rs  types.rs
xen-ioctls/src/xdm/: mod.rs  types.rs  xdm.rs
xen-ioctls/src/xec/: types.rs  xec.rs
xen-ioctls/src/xfm/: xfm.rs
xen-store/src/: types.rs  xs.rs
xen-sys/: Cargo.toml  README.md  wrapper.h
xen-sys/src/: hypercall.rs  lib.rs  start_info.rs
xen-sys/src/aarch64/: mod.rs
xen-sys/src/hypercall/: mod.rs  x86_64.rs
xen-sys/src/x86_64/: bindgen.rs  hypercall.rs  mod.rs
xen/src/: lib.rs
xen/src/aarch64/: cache.S  entry.rs  head.S  mod.rs
xen/src/hypercall/: console_io.rs  mod.rs  sched_op.rs
xen/src/x86_64/: entry.rs
