[package]
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
description = "Compiler bits to create Rust unikernels for Xen"
homepage = "https://gitlab.com/cardoe/oxerun"
repository = "https://gitlab.com/cardoe/oxerun.git"
license = "MIT/Apache-2.0"
name = "oxerun"
readme = "README.md"
version = "0.0.0-pre1"

[badges]
gitlab = { repository = "cardoe/sakl" }

[lib]
crate-type = ["staticlib"]

[dependencies]
xen = { path = "../xen", version = "0.0.0-pre" }
xen-sys = { path = "../xen-sys", version = "0.0.0-pre" }
