[package]
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
description = "FFI bindings to Xen public headers"
categories = ["external-ffi-bindings"]
homepage = "https://gitlab.com/cardoe/oxerun"
repository = "https://gitlab.com/cardoe/oxerun.git"
license = "MIT/Apache-2.0"
name = "xen-sys"
version = "0.0.0-pre"
