[package]
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
description = "Kernel level hypercall support for Xen"
categories = ["external-ffi-bindings"]
homepage = "https://github.com/rust-vmm/xen-sys"
repository = "https://github.com/rust-vmm/xen-sys.git"
license = "Apache-2.0 OR MIT"
name = "xen-sys"
readme = "README.md"
version = "0.1.0"
edition = "2018"

[dependencies]
cty = "=0.2.0"
xen-bindings = { path = "../xen-bindings" }
