[package]
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
description = "Idomatic Rust interfaces to Xen APIs"
categories = ["external-ffi-bindings"]
homepage = "https://gitlab.com/cardoe/oxerun"
repository = "https://gitlab.com/cardoe/oxerun.git"
license = "MIT/Apache-2.0"
name = "xen"
version = "0.0.0-pre"

[dependencies.xen-sys]
path = "../xen-sys"
version = "=0.0.0-pre"
