[package]
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
description = "Idomatic Rust interfaces to Xen hypercall APIs"
categories = ["external-ffi-bindings"]
homepage = "https://gitlab.com/cardoe/oxerun"
repository = "https://gitlab.com/cardoe/oxerun.git"
license = "MIT/Apache-2.0"
name = "xen"
readme = "README.md"
version = "0.0.0-pre"

[dependencies.xen-sys]
path = "../xen-sys"
version = "=0.0.0-pre"
