[package]
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
description = "Compiler bits to create Rust unikernels for Xen"
homepage = "https://github.com/rust-vmm/xen-sys"
repository = "https://github.com/rust-vmm/xen-sys.git"
license = "MIT/Apache-2.0"
name = "oxerun"
readme = "README.md"
version = "0.1.0"
edition = "2018"

[dependencies]
xen = { path = "../xen" }
xen-sys = { path = "../xen-sys" }
