[package]
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
description = "Kernel level hypercall support for Xen"
categories = ["external-ffi-bindings"]
homepage = "https://gitlab.com/cardoe/oxerun"
repository = "https://gitlab.com/cardoe/oxerun.git"
license = "MIT/Apache-2.0"
name = "xen-sys"
readme = "README.md"
version = "0.0.0-pre1"
edition = "2018"

[dependencies]
cty = "=0.2.0"
xen-bindings = { path = "../xen-bindings" }