[package]
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
description = "Idomatic Rust interfaces to Xen hypercall APIs"
categories = ["external-ffi-bindings"]
homepage = "https://github.com/rust-vmm/xen-sys"
repository = "https://github.com/rust-vmm/xen-sys.git"
license = "MIT/Apache-2.0"
name = "xen"
readme = "README.md"
version = "0.1.0"
edition = "2018"

[dependencies]
xen-sys = { path = "../xen-sys" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target, values("x86_64-xen-pv"))'] }
