[package]
authors = ["Mathieu Poirier <mathieu.poirier@linaro.org"]
description = "Test application to test the Xen store interface"
homepage = "https://gitlab.com/cardoe/oxerun"
repository = "https://gitlab.com/cardoe/oxerun.git"
license = "MIT/Apache-2.0"
name = "xstore"
readme = "README.md"
version = "0.0.0-pre1"
edition = "2018"

[dependencies]
xen-store = { path = "../../crates/xen-store", version = "0.0.0-pre1" }
