[package]
authors = ["Mathieu Poirier <mathieu.poirier@linaro.org"]
description = "Test application to test the Xen store interface"
homepage = "https://github.com/rust-vmm/xen-sys"
repository = "https://github.com/rust-vmm/xen-sys.git"
license = "MIT/Apache-2.0"
name = "xstore"
readme = "README.md"
version = "0.1.0"
edition = "2018"

[dependencies]
xen-store = { path = "../../crates/xen-store" }
